--- a/package.json
+++ b/package.json
@@ -19,18 +19,34 @@
   "dependencies": {
     "@dfinity/agent": "^0.19.3",
     "@dfinity/candid": "^0.19.3",
-    "@dfinity/principal": "^0.19.3"
+    "@dfinity/principal": "^0.19.3",
+    "bootstrap": "^5.2.3",
+    "chart.js": "^4.2.1",
+    "postcss-loader": "^7.3.3",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.17.0",
+    "react-uuid": "^2.0.0",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "assert": "2.0.0",
     "buffer": "6.0.3",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.1",
     "dotenv": "^16.0.3",
     "events": "3.3.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "5.5.0",
     "process": "0.11.10",
     "stream-browserify": "3.0.0",
+    "style-loader": "^3.3.3",
     "terser-webpack-plugin": "^5.3.3",
+    "ts-loader": "^9.5.0",
+    "typescript": "^5.2.2",
     "util": "0.12.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
