--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.17.0",
+    "react-toastify": "^9.1.3",
     "react-uuid": "^2.0.0",
     "web-vitals": "^2.1.4"
   },
